--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "build": "npx prisma generate && npx prisma migrate deploy",
+    "build": "npx prisma migrate && npx prisma migrate deploy && npx prisma db seed",
     "start-prod": "node server.js",
     "start-dev": "nodemon server.js",
     "create-tunnel": "sudo sysctl -w net.core.rmem_max=7500000 && sudo sysctl -w net.core.wmem_max=7500000 && cloudflared tunnel --url http://localhost:3000",
