updates before deploying to production

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,5 +2,12 @@ DATABASE_URL="postgresql://RankedAdmin:RankedAdmin1234%23%23@localhost:5432/rank
 PATH_TO_PROBLEMS="" # full path to the problems directory
 JUDGE0_API_URL="" # URL for the Judge0 API, if using docker-compose
 JUDGE0_API_KEY="" # API key for the Judge0 API.
+NODE_ENV=""
+
 CALLBACK_URL="http://callback-url/judge0/callback" # URL judge0 will call when the submission is completed. need to add /judge0/callback to the end of the url
 JWT_SECRET=your_jwt_secret
+
+REDIS_HOST="localhost"
+REDIS_PORT=6379
+
+FRONTEND_URL="http://localhost:3000" # URL of the frontend application, used for CORS and other purposes
